CASE: Refactor for using Entity Framework

--- a/BackendCandidateChallenge/QuizService/appsettings.json
+++ b/BackendCandidateChallenge/QuizService/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "WebApiDatabase": "Data Source=LAPTOP-AQHGC6QE\\SQLEXPRESS;Initial Catalog=TestDatabase;Integrated Security=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
